@@ -62,6 +62,7 @@ x added: config key `allow_localize` enables a localization for all `HTML` files
 x added: `controller.breadcrumb` returns all sitemap items
 x added: `PAUSESERVER(name, pause)` pauses web server (alias for `F.wait()`)
 - added: `PROXY(endpoint, hostname, [before_fn(uri,req,res)], [after_fn(res)])` makes a direct proxy from webserver
+- added: `schema.middleware(function($, next))` for creating simple middlewares for Schema operations
 
 x updated: `$.invalid()` without arguments can return a function `function(err)`
 x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
